# HEIC-to-JPEG

./: CMakeLists.txt  README.md  lib_headers.h  main.c  structs.h
